Tue Aug  5 20:01:00 UTC 2014  Byron Harris  <harrisb@ociweb.com>

        * dds/DCPS/DataReaderImpl.cpp:
        * dds/idl/CPPTemplate.txt:
        * dds/idl/HTemplate.txt:

          Fixed a possible deadlock condition that can occur while
          waiting inside WaitSet::wait() in one thread and
          DataReaderImpl::data_received() is called from another.

Tue Aug  5 19:09:06 UTC 2014  Peter Oschwald  <oschwaldp@ociweb.com>

        * bin/dcps_tests.lst:

          Re-enabled ManyToMany test for rtps_disc 12To12

Tue Aug  5 18:38:36 UTC 2014  Peter Oschwald  <oschwaldp@ociweb.com>

        * bin/PerlDDS/Run_Test.pm:

          Added space before the added DCPSBit parameter to that it
          doesn't get concatenated with the log file name.

Tue Aug  5 17:49:33 UTC 2014  Peter Oschwald  <oschwaldp@ociweb.com>

        * tests/DCPS/ManyToMany/publisher.cpp:
        * tests/DCPS/ManyToMany/run_test.pl:
        * tests/DCPS/ManyToMany/subscriber.cpp:

          Fixed problem with ManyToMany test using transport type
          rtps_udp to use a separate transport instance for each
          participant created.  In these cases, a new .ini file is
          generated to provide configurations for each participant
          and the subscriber or publisher binds the proper config to each.

Mon Aug  4 20:51:13 UTC 2014  Byron Harris  <harrisb@ociweb.com>

        * tests/DCPS/Instances/Instances.mpc:
        * tests/DCPS/PersistentInfoRepo/PersistentInfoRepo.mpc:

          Added dependency on the model library which is needed for
          static builds.

Fri Aug  1 21:16:52 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * bin/dcps_tests.lst:

          Remove ManyToMany rtps_disc test - not supported

Fri Aug  1 19:49:06 UTC 2014  Byron Harris  <harrisb@ociweb.com>

        * tests/Utils/Sync.h:
        * tests/Utils/Sync.cpp:
        * tests/Utils/TestUtils.mpc:

          Add read and writer sync helper classes that are currently